--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,7 +6,10 @@
 # on:
 #   push:
 #     branches: [ main ]
-#   pull_request:
+      - uses: actions/upload-artifact@master
+        with:
+          name: webpack artifacts
+          path: public/
 #     branches: [ main ]
 
 # jobs:
@@ -67,4 +70,3 @@ jobs:
         npm test
       env:
         CI: true
-
